--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
+:root{
+  --primary: #0b1014;
+  --primary500: #23354a;
+  --secondary: #f5f5f5;
+  --secondary500: #ebebeb;
+  --midnight: #000009;
+  --midnight100: #00234d;
+  --midnight300: #002b5e;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -21,6 +29,35 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background: radial-gradient(circle, var(--primary) 0%, black 100%);
   }
 }
+.signin {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  
+}
+.box {
+  border-top: var(--midnight100) 10px solid;
+  width: 900px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  padding: 50px 5px 40px 5px;
+  background: linear-gradient( var(--midnight) 0%, #000005 100%);
+  
+  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 1));
+  
+  
+}
+.entrar{
+ background-color: var(--midnight100);
+ width: 100%;
+ margin-top: 50px;
+ margin-bottom: 0px ;
+}
+
