--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
   --secondary: #f5f5f5;
   --secondary500: #ebebeb;
   --midnight: #000009;
+  --midnight200: #000029;
   --midnight100: #00234d;
   --midnight300: #002b5e;
 }
@@ -25,7 +26,7 @@ a {
 
 @media (prefers-color-scheme: dark) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
   body {
     color: white;
@@ -61,3 +62,65 @@ a {
  margin-bottom: 0px ;
 }
 
+/* topbar css */
+
+.topbar{
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  width: 100% ;
+  height: 4vw;
+  background-color: var( --midnight100);
+  color: var(--secondary);
+  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 1));
+  z-index: 99;
+}
+.topbar__title{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 1rem;
+  background-color: #00234d;
+  width: 40vh;
+  font-size: xx-large;
+  font-weight: 700;
+  border-right: solid 3px #001e42;
+  cursor: pointer;
+}
+.topbar__title svg{
+  cursor: pointer;
+  border-radius: 50%;
+  width: 50px;
+  padding: 5px;
+  
+
+}
+.topbar__title svg:hover{
+ color: white;
+ background-color: #002b5e;
+ transition: 200ms;
+  
+}
+
+
+
+/* sidebar css */
+.sidebar{
+  height: 100vw;
+  width: 40vh;
+  padding-left: 1rem;
+  top: 4vw;
+  background-color: var( --midnight300);
+  color: var(--secondary);
+  position: fixed;
+  left: -20vw;
+  transition: 300ms;
+  z-index: 99;
+  
+}
+.sidebar.open{
+  
+  left: 0;
+  transition: 500ms;
+  filter: drop-shadow(0px 10px 8px  rgba(0, 0, 0, 1));
+}
