--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,10 @@
 :root{
   --primary: #0b1014;
   --primary500: #23354a;
-  --secondary: #f5f5f5;
-  --secondary500: #ebebeb;
+  --text: #f5f5f5;
+  --text500: #ebebeb;
+  --secondary300: #2bbbad;
+  --secondary500: #1ee9d4;
   --midnight: #000009;
   --midnight200: #000029;
   --midnight100: #00234d;
@@ -67,11 +69,11 @@ a {
 .topbar{
   display: flex;
   justify-content: space-between;
+  background-color: #0b1014;
   position: fixed;
   width: 100% ;
-  height: 4vw;
-  background-color: var( --midnight100);
-  color: var(--secondary);
+  height: 9vh;
+  color: var(--text);
   filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 1));
   z-index: 99;
 }
@@ -84,43 +86,64 @@ a {
   width: 40vh;
   font-size: xx-large;
   font-weight: 700;
-  border-right: solid 3px #001e42;
+  border-right: solid 2px var(--secondary300)/* #001e42 */;
+  border-radius: 5px 5px;
   cursor: pointer;
+  z-index: 100;
 }
 .topbar__title svg{
   cursor: pointer;
-  border-radius: 50%;
   width: 50px;
   padding: 5px;
-  
-
+  margin-right: 10px;
+  transition: 300ms;
 }
 .topbar__title svg:hover{
- color: white;
- background-color: #002b5e;
- transition: 200ms;
+  filter: drop-shadow(0px 0px 5px rgb(255, 255, 255));
+  transition: 300ms;
   
+}
+.topbar__info{
+  color: var(--text)
+
+}
+.topbar__profile{
+  display: flex;
+  justify-content: end;
+  z-index: 100 ;
+  color: var(--text);
+  width: 200px;
+
+}
+.topbar__profile svg{
+  width: 4rem;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: 500ms;
+}
+.topbar__profile svg:hover{
+ filter: drop-shadow(0px 0px 5px rgb(255, 255, 255));
+ transition: 500ms;
 }
 
 
 
 /* sidebar css */
 .sidebar{
-  height: 100vw;
+  height: 100%;
   width: 40vh;
   padding-left: 1rem;
   top: 4vw;
   background-color: var( --midnight300);
-  color: var(--secondary);
+  color: var(--text);
   position: fixed;
-  left: -20vw;
+  left: -40vw;
   transition: 300ms;
-  z-index: 99;
+  z-index: 98;
   
 }
 .sidebar.open{
-  
   left: 0;
-  transition: 500ms;
+  transition: 400ms;
   filter: drop-shadow(0px 10px 8px  rgba(0, 0, 0, 1));
 }
